tests/tooling/fixtures/native/execution/negative/pure_definition_impure_transitive_call.objc3
module PureDefinitionImpureTransitiveCallExecution;

let counter = 0;

fn bump() -> i32 {
  counter = counter + 1;
  return counter;
}

pure fn touch() -> i32 {
  return bump();
}

fn main() -> i32 {
  return touch();
}
